Save/Update files [ci skip]

--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -131,166 +131,166 @@
  aristocracy_ideas:0 "貴族アイデア"
  aristocracy_ideas_bonus:0 "完成した貴族アイデア"
  noble_knights:0 "貴族騎士"
- noble_knights_desc:0 "騎兵を維持するには十分な数の馬を飼育できる経済体制が必要である。貴族階級の特権を保証した場合、彼らがより幸福になるだけでなく、必要な馬の飼育により励んでくれるだろう。宮廷の道化師は、それを農奴を保証する奉仕活動だとみなすだろう。"
+ noble_knights_desc:0 "騎兵の維持には、大量の馬を養えるだけの経済力が必要だ。貴族特権を保護することは彼らを満足させられるだけでなく、より多くの馬の確保にも役立つだろう。農奴制の継続に繋がるとして反対する愚か者もいるが。"
  serfdom:0 "農奴制"
- serfdom_desc:0 "軍隊の歩兵は、貧しい食事、低賃金、事実上存在しない医療制度を伴う、誰もなりたくない職業である。もし、農民を土地に縛り付けたとしたら、我々は新兵を探す場所を正確に知るだろう。"
+ serfdom_desc:0 "わざわざ歩兵になりたがる者はいない。食事は少ないし、給与も安い。けがや病気の時に治療してくれる医者もいない。農民を土地に縛り付け、動員できる人員の居場所を正確に把握できるようにすべきだろう。"
  noble_officers:0 "貴族士官"
- noble_officers_desc:0 "誰が我々の軍隊を率いるのかは重要な選択だ。貴族たちは、自身に優先権が与えられることを要求している。我々が彼らに優先権を与えることで、彼らは敵に刀剣の一撃を与えることで勇気を証明する機会を得ることができる。"
+ noble_officers_desc:0 "指揮官を誰にするかというのは重要な問題だ。貴族たちはその地位を自分たちに優先的に回すよう要求している。彼らを士官に任命し、活躍の機会を与えてやるべきだ。その剣をもって、己の勇気を証明してみせよ！"
  local_nobility:0 "在地貴族"
- local_nobility_desc:0 "貴族たち、自身が普通の者よりも単純に優れていることを知っており、価値ある者に忠誠を捧げるだろう。もし、我々が彼らの特権を承認すれば、彼らは当然、我々の偉大さを覚えて、外国勢力の誘惑により抵抗するだろう。"
+ local_nobility_desc:0 "貴族たちは、自分が平民より優秀だと思っている。そして、忠誠を誓うに値するとみなした者にしか従わない。彼らの特権を保証してやれば、その恩義に報いるため、外国勢力との戦いに力を注いでくれるだろう。"
  international_nobility:0 "国際貴族"
- international_nobility_desc:0 "国際関係は難しい駆け引きである。外国人との取引に慣れている商人階級が外交に最も適していると言う人もいる。この様に言う人々は、長年にわたって貴族が確立してきた血縁関係を無視しており、これらの関係を利用して我々は外交を有利に進めるべきだ。"
- noble_resilience:0 "貴族の繋がり"
- noble_resilience_desc:0 "この大陸の様々な傭兵団は、多くの場合、地位の低い貴族によって率いられている。貴族と親密な関係になることによって、より多く、より大きい傭兵団を探し出すために、彼らの繋がりを利用することができる。"
- military_traditions:0 "軍の伝統"
- military_traditions_desc:0 "軍事思想は常に進化しており、我々の軍事思想もそれとともに進化していかなければならない。貴族の間の功績の伝統を奨励することによって、地位に就くには、戦場で栄光を勝ち取った人であることが求められるようになる。勇気のようなものは、常に有用だが、圧倒的な敵に対しては通用しない。"
+ international_nobility_desc:0 "外交とは難しい駆け引きの連続だ。商人たちは外国人との取引に慣れているのだから、外交にも向いているだろう、と言う者もいる。しかし彼らには忘れていることがある。貴族たちには長年にわたり築いてきた外国貴族との血縁関係があるのだ。そうした関係は外交にも役立つことだろう。"
+ noble_resilience:0 "貴族の人脈"
+ noble_resilience_desc:0 "傭兵団の中には、中小貴族により率いられたものがある。貴族との関係を構築することは、彼らの人脈を生かし、より強力な傭兵団を探し、雇用するのだ。"
+ military_traditions:0 "軍事的伝統"
+ military_traditions_desc:0 "軍事理論は常に進化しており、我々もその進化についていかねばならない。貴族たちを戦場に出し、功績に応じた地位につけるのだ。勇気は確かに必要だが、強大な敵に対してはそのようなものは通用しない。"
  plutocracy_ideas:0 "富豪アイデア"
  plutocracy_ideas_bonus:0 "完成した富豪アイデア"
  tradition_of_payment:0 "給与の伝統"
- tradition_of_payment_desc:0 "多少ならば傭兵への支払いは遅れて構わなかろうという誘惑は常にあるが、とは言え何が突然の支払いと共に来るだろうかは知りえないのだ。我等はそうするまいと、雇った傭兵たちには日時を違えず給与を払い、傭兵隊長はこのことを知ってそして思い出すだろう。"
+ tradition_of_payment_desc:0 "傭兵への給与は少しぐらい遅れても問題ないという考え方があるが、それは間違いだ。給料の支払いが滞った時の傭兵たちは、何をするか分からない。我々はそのような愚を犯すべきではない。給与を期日通り支払うことで、傭兵隊長たちの信頼を勝ち取るのだ。"
  abolished_serfdom:0 "農奴制の廃止"
- abolished_serfdom_desc:0 "我々は、自由な市民軍の兵たちが、強制された人よりも戦うことをはるかに喜んでいることを、ローマ時代の報告書を読んで知っている。我々は農民をかなり自由にして、彼らが自由を守るために戦うようにしなければならない。"
+ abolished_serfdom_desc:0 "古代ローマの歴史は、自由な民衆により編成された市民軍の方が徴集された軍隊より強いということを示している。農民たちを農奴制から解放すれば、彼らは己の自由を守るため戦うだろう。"
  bill_of_rights:0 "権利の請願"
- bill_of_rights_desc:0 "市民に一定の基本的権利を付与することで、我々は農民が蜂起する可能性を減少させる。"
+ bill_of_rights_desc:0 "民衆にある程度の権利を与えてやれば、反乱を起こしにくくなるだろう。"
  free_merchants:0 "自由な商人"
- free_merchants_desc:0 "反動的で偏屈な社会では、交易商は、何らかの形で土地を所有する人々よりも軽視されている。しかし我々は、富はどこから来るのかにかかわらず、富は力であることを知っている。"
- free_subjects:0 "自由な民"
- free_subjects_desc:0 "奴隷を叩き付けて仕事をさせることはできるが、熱心に働かせるには最善の方法ではない。自然哲学者の中には、人は利益によって働くと考える者もおり、我々は、支払いを現金に替えることで、農民はより熱心に生産を行うだろう。"
+ free_merchants_desc:0 "反動的で偏屈な社会では、商人たちは土地所有者に比べ軽視されている。しかし我々は知っている。富には力があるのだ。たとえその富がどこから来たとしても、その事実は変わらない。"
+ free_subjects:0 "自由な民衆"
+ free_subjects_desc:0 "ムチで叩くだけでも奴隷は働くだろう。だが、一生懸命に働かせるにはそれでは不十分だ。ある自然哲学者は言っている。人を動かすのは利益だと。地代を金納から物納に切り替えれば、農民たちは生産をより熱心に行うだろう。"
  humanist_tolerance:0 "人文主義的寛容"
- humanist_tolerance_desc:0 "より寛容な社会に向かって努力し、より合理的な方法で我々の社会的、宗教的問題を解決しようとする試みによって、市民の暴動の危険性は減少するだろう。"
+ humanist_tolerance_desc:0 "市民の暴動を防ぐには、寛容な社会を作ることが重要だ。そしてそのためには、社会問題や宗教問題について、より合理的な形での解決を図るべきだろう。"
  emancipation:0 "解放"
- emancipation_desc:0 "長い間、我々は土地の所有権を十分に信頼できるものに限定してきた。 これらの制限を解除すれば、土地の保有に繋がるだろう。この改革により、軍隊の生活を追求する価値のある季節労働者の共同資産を作り出すだろう。"
+ emancipation_desc:0 "長きにわたり、我々は土地の所有権を十分に信頼できる者だけに限定してきた。こうした制限を撤廃すれば、土地所有は拡大するだろう。そしてそれは、軍が動員できるような季節労働者の確保にも繋がるだろう。"
  dynamic_court:0 "活発な宮廷"
- dynamic_court_desc:0 "真に革新的な宮廷とは、誰もが光り輝くことができるものだ。 我々は、古い伝統、家柄または富が、宮廷の発展の妨げになったり、国家に奉仕することを幸福に思う有能な人々への障害になったりしないように努める必要がある。"
+ dynamic_court_desc:0 "革新的なことができるのは、誰もが活躍できるような宮廷だけだ。家柄や資産といった古い伝統が発展の妨げとなったり、才能ある者にとっての障害となったりするようなことがあってはならない。"
  innovativeness_ideas:0 "革新アイデア"
  innovativeness_ideas_bonus:0 "完成した革新アイデア"
  patron_of_art:0 "芸術の保護者"
- patron_of_art_desc:0 "文化的に洗練された社会への探求はここから始まる。 我々の芸術的な奇跡は、この時代の中で最も素晴らしいものとして、歴史に残るだろう。"
+ patron_of_art_desc:0 "文化的に洗練された社会への探求はここから始まる。 我々の芸術的な奇跡は、この時代における最も素晴らしいものとして、歴史に残ることだろう。"
  pragmatism:0 "実用主義"
- pragmatism_desc:0 "あまりにも多くの国で、国の認識によって政策が形作られている。それはあまりにも愚かなことで、もし傭兵が我々の需要により適していれば、高価な常設軍に投資する代わりに傭兵を使うだろう。"
+ pragmatism_desc:0 "直感だけで政策を決めている国は多い。ああ、何と愚かなことだろう！傭兵の方が実情に適しているなら、金のかかる常備軍を使う必要などないのに！"
  scientific_revolution:0 "科学革命"
- scientific_revolution_desc:0 "我々は、技術的な発明を特徴とする社会的・経済的革命に向けて努力し、農耕社会を産業社会に転換させるべきである。"
+ scientific_revolution_desc:0 "今こそ技術革新により、社会、経済の改革を実現しよう。そして、農耕社会から工業社会への移行を目指すのだ！"
  knowledge_transfer:0 "知識の伝承"
- knowledge_transfer_desc:0 "経験を保存することは、国を運営するために最も重要なことだ。 我々は、戦闘に役立つ知識を、新兵に指導制度を通して伝承していく必要がある。"
+ knowledge_transfer_desc:0 "知識の継承は、国家にとって最も重要なことだ。訓練の中で、新兵たちに熟練兵たちの知識と経験を継承するのだ。"
  organised_recruiting:0 "組織的徴募"
- organised_recruiting_desc:0 "船長が連隊を補充するために兵士を募集しようとした時代、多くの人々が我々の軍隊で特定の死を受け入れることを望まなかったため、この工程には時間がかかった。しかし、この問題に理性の原則を適用することによって、我々は兵士たちがより早く制服を身につける体制を示すことができる。"
+ organised_recruiting_desc:0 "昔の将軍たちは、兵士の徴集に多大な時間を要していた。一般に、前線での死を望むものは少ない。しかし、もっと効率的に人員を徴集する体制を確立することはできるはずだ。"
  optimism:0 "楽観主義"
- optimism_desc:0 "勝利は戦場だけでなく、応接間でも勝ち取ることができる。我々は理性を進歩させることによって、一時的な妨げの影響を無視し、代わりに当然の勝利を手にするために準備できるようにする。"
+ optimism_desc:0 "勝利は戦場だけでなく、応接間でも勝ち取ることができる。理性の進歩は民衆が一時の挫折を乗り越え、勝利を確実なものとすることを可能にする。"
  formalized_officer_corps:0 "正規の士官部隊"
- formalized_officer_corps_desc:0 "伝統的に士官は貴族出身だったが、我々が多くの貴族を抱えることが士官の不足につながることはない。しかし実際には、我々の軍隊には下層階級の人々が多くいる。我々は、専門の士官として、それらの人々のいくらかを昇格させることを検討するべきだ。"
+ formalized_officer_corps_desc:0 "伝統的に士官は貴族出身だったが、貴族の数は決して多くはなく、それゆえに我々は士官の不足に悩まされている。だが、軍には下層階級の人間がたくさんいる。彼らを士官に昇格させることも、一考の余地があるのではなかろうか？"
  religious_ideas:0 "宗教アイデア"
  religious_ideas_bonus:0 "完成した宗教アイデア"
  deus_vult:0 "神がそれを望まれる"
- deus_vult_desc:0 "聖戦のときの声に参加して、「神がそれを望まれる」と叫びながら異教徒を押しつぶす。"
+ deus_vult_desc:0 "聖戦の喊声を上げよ！異教徒を叩き潰せ！「神がそう望んでおられる」のだ！"
  missionary_schools:0 "宣教師学校"
- missionary_schools_desc:0 "外へ出て真実の信仰を広げる用意ができている人が不足しているわけではないが、これらの人々のほとんどは単に利益よりも害を生み出す。しかし、宣教師を養成する専門学校があれば、信仰を広めるだけでなく、よりよい結果を残すことができる。"
+ missionary_schools_desc:0 "わが国には宣教師がいないわけではないが、彼らは益より害をなすことが多い。宣教師を育成する専門の施設を設置することは、宣教師を増やす以外にも、様々な利益をもたらすだろう。"
  church_attendance_duty:0 "礼拝の義務化"
- church_attendance_duty_desc:0 "礼拝を義務化する政策を採用することで、宗教的価値観や信念を重視することになり、法と秩序を維持するためのコストは間違いなく最小限に抑えられる。"
+ church_attendance_duty_desc:0 "礼拝を義務化し、宗教的な価値観や信念に重きを置くことで、法と秩序の維持は今よりもはるかに容易になるだろう。"
  divine_supremacy:0 "神の優位性"
- divine_supremacy_desc:0 "我々の国とその周辺の国境から、我々を悩ませる異教徒を追放することが最も重要だ。"
+ divine_supremacy_desc:0 "最も重要なことは、我が国とその周囲に住む異教徒たちを一掃することだ。"
  devoutness:0 "信心"
- devoutness_desc:0 "宗教は、我々の支配にとって最も重要な防波堤の一つである。人々の前で支配者が信心深さを示すことで、支配されている人はそれに従うだろう。人々の間で信心深さが高まることは我々の支配を強化することになる。"
+ devoutness_desc:0 "宗教は、統治における最も重要な防波堤の一つだ。支配者が民衆の前でその信心深い心を示せば、民衆もそれにならうだろう。そして、民衆の信仰が強まれば、我々の支配もさらに強まるのだ。"
  religious_tradition:0 "宗教的伝統"
- religious_tradition_desc:0 "我々の信仰の強さと崇拝と礼拝の一般公開は、遠近問わず様々な土地の人々から賞賛されている。これは我々の国土への威信と栄光を映し出している。"
+ religious_tradition_desc:0 "周辺諸国は、強い信仰を持ち、それを公の場でも示す我々のことを賞賛している。我が国の威信と栄光は、そのことを反映している。"
  ecumenism:0 "世界教会主義"
- ecumenism_desc:0 "国内の異端者を扱う方法の問題は、常に困難が付きまとう。 昔ながらの火と剣による手法は、最終的にはほとんどの問題を解決し、外交も成功することができる。様々な宗派間の対話を奨励することで、誤解を減らし、平和を促進することができる。"
+ ecumenism_desc:0 "異端への対処は困難だ。昔ながらの火と剣によるやり方は確かにだいたいの問題の解決につながるが、こうした問題は交渉でも解決できる。宗派間の対話を奨励することで、双方の誤解を解き、領内の平和を実現するのだ。"
  spy_ideas:0 "諜報アイデア"
  spy_ideas_bonus:0 "完成した諜報アイデア"
  privateers:0 "私掠船"
- privateers_desc:0 "敵の商取引に関する戦争を遂行することは、勝利の三本柱の頂点にある。我々は、気難しい船長に敵の交易に打撃を与えるように促す。"
+ privateers_desc:0 "敵の商取引に関する戦争を遂行することは、勝利の三本柱の頂点にある。気難しい船長たちに命じて、敵の交易船を襲撃させよう。"
  vetting:0 "身元調査"
- vetting_desc:0 "営利目的の事務所が多すぎると、行政を運営する人々が外国からの賄賂を受け取りやすくなってしまうことがある。いくつかの単純な身元確認によって、最も腐敗しやすいものを取り除くことができる。"
+ vetting_desc:0 "我が国の行政機関には営利目的のものが多く、外国からの賄賂に弱い傾向がある。多少でも身元調査を行えば、最も腐敗しやすい人間だけでも排除できるだろう。"
  rumourmongering:0 "噂売り"
- rumourmongering_desc:0 "敵はすべての面で脆弱である。右耳への毒は、時に1万の兵士と同じくらい致命的である。我々は勝利に必要なあらゆる暗い技術を実践する準備をしなければならない。"
+ rumourmongering_desc:0 "敵はあらゆる面で弱体だ。ちょっとしたデマが1万の軍勢と同じ力を発揮することさえある。勝利のためには、そうした卑劣な手段も必要なのだ。"
  efficient_spies:0 "効率的なスパイ"
  efficient_spies_desc:0 "金のためならなんでもする農民はごまんといるが、その中から本当に使える者を見つけ出すのはたやすくない。我々は経験から有能な人材とそうでない者を見分ける術を学んでいる。"
  shady_recruitment:0 "日陰者の雇用"
- shady_recruitment_desc:0 "我々には非常に低い階級から優秀な人を識別して採用する能力があり、怪しげな者の多くは採用されていない。もちろんそれは我々がそうしているからだ。それは素晴らしいことだ。"
+ shady_recruitment_desc:0 "下層階級の中にも信用がおけ、雇用するに値する人間はいる。そして、我々はそうでない連中を見つけて排除することができる。素晴らしいことだ。"
  destabilising_efforts:0 "不安定化作戦"
- destabilising_efforts_desc:0 "我々はその諜報能力によって敵の安定性を脅かすことが可能である。 我々は、彼らの最大の味方を敵に変えることができる。"
+ destabilising_efforts_desc:0 "我々の諜報能力は、敵国の安定をも脅かすことを可能にした。彼らの一番の友人を、敵に変えることさえできるだろう。"
  espionage:0 "諜報"
- espionage_desc:0 "我々はより多くのスパイを訓練し、それによって敵についての政治的・軍事的な情報を得る機会を増やすことができる。"
+ espionage_desc:0 "より多くのスパイを訓練することで、敵国の政治、軍事など様々な機密情報を入手するチャンスを増やすことができる。"
  diplomatic_ideas:0 "外交アイデア"
  diplomatic_ideas_bonus:0 "完成した外交アイデア"
  foreign_embassies:0 "在外大使"
  foreign_embassies_desc:0 "外交とは、同時にいくつかの側面を均衡させようとする繊細な技術である。定期的に報告を寄越す在外大使が居れば、我々は選択肢を考えるために必要な情報を入手できるだろう。"
  claim_fabrication:0 "請求権の捏造"
- claim_fabrication_desc:0 "何かを自分のものだと主張するのは簡単だが、自分が妥当な主張をしていることを他人に納得させるのははるかに難しい。我が国の外交網を広げることによって、問題となってる人々に、我々の主張が正しいと確実にわかってもらえるようになるだろう。"
+ claim_fabrication_desc:0 "何かの所有権を主張するのは簡単だが、その主張を正当なものと納得させるのは何倍も難しい。外交網を拡大し、当事者たちに、我々の主張の正しさを理解させねばならない。"
  cabinet:0 "内閣"
- cabinet_desc:0 "行政権を持つ評議会を設置することによって、私たちは最も熟練した外交官を集めることができる。"
+ cabinet_desc:0 "専門の行政機関を設置することで、熟練の外交官たちを集めることができる。"
  adaptability:0 "適応性"
- adaptability_desc:0 "そこにあるものは我らのものであり、決して放棄することのない祖先の領土の一部である。ここで少しの柔軟性が、決して譲ることができないと考えられる土地をもっと多く見て、全世界は最悪の場合、我々の十字軍が正当なそれを回復することを知るだろう。"
+ adaptability_desc:0 "父祖の時代より、その土地は我らのものだ。決して失われることのない、我らの不可分の領土だ。しかしもっと柔軟性を持てれば、今よりも多くの土地を「不可分の領土」にできるだろう。そして、それを取り戻すための我々の聖戦が正当だと、全世界に知らしめることもできるだろう。"
  revolution_and_counter:0 "革命と反革命"
- revolution_and_counter_desc:0 "時代の政治がより分裂し急進的になるにつれて、我々と同じではない政府に対して戦争を行うこと以外に選択肢はないかもしれない。このアイデアを取り入れることで、それを無償で行うことができる。"
+ revolution_and_counter_desc:0 "政治的対立が先鋭化しつつある。この中で異なる政治体制の国々に対するには、もはや戦争に訴えるしかないのかもしれない。このアイデアを取得すると、そうした戦争を無償で行うことができるようになる。"
  diplomatic_influence:0 "外交的影響力"
- diplomatic_influence_desc:0 "外交に焦点を当てることで、我々は外交の舞台での力を強化することができる。この力は我々に多くの友人をもたらすものだ。"
+ diplomatic_influence_desc:0 "外交力とは、多くの友人を作ることができる力だ。この力をさらに高めるためには、外交に注力する必要がある。"
  flexible_negotiation:0 "自在な交渉"
- flexible_negotiation_desc:0 "和平のテーブルで何が得られるのかは決して分からないので、すべての選択肢を開いた状態で参加する必要がある。"
+ flexible_negotiation_desc:0 "和平交渉のテーブルでは、何が得られるか分からない。こうした場ではあらゆる選択肢を考慮に入れる必要がある。"
  agent_training:0 "諜報員の養成"
  agent_training_desc:0 "我々は多くの秘密作戦を計画しているが、その任務のための人員が不足している。スパイの訓練方法を確立することは、危険な任務に利用できる諜報員を増強するのに役立つだろう。"
  additional_loyalist_recruitment:0 "さらなる支持者の募集"
- additional_loyalist_recruitment_desc:0 "当然ながら、我々の支配への神の権利を理解している、我々の従属国の土地に住む人々がいる。これらの啓発された個人を募集し、援助することによって、我々は従属国に対する理解を強化することができる。"
+ additional_loyalist_recruitment_desc:0 "当然だが、我が国の従属諸国に住む人々の中には、神に与えられた我々の支配権を理解する者も必ずいる。こうした優れた人々を集め支援することで、従属国に対する我々の支配を強めることができるだろう。"
  audit_checks:0 "監査"
- audit_checks_desc:0 "我々は他国に潜入しているように見えるが、我々は自分の宮廷に広がる有害なアイデアを警戒しなければならない。我々の閣僚が国家の利益のために行動していることを確認するため監査集団を組み立てることは、腐敗した要素を根絶するのに役立つ。"
+ audit_checks_desc:0 "他国に潜入する時は、我々自身の宮廷に広まる有害な思想にも警戒せねばならない。監査組織を創設することで、大臣たちが国益のため行動しているかどうか監視し、腐敗を暴き根絶するのだ。"
  offensive_ideas:0 "攻勢アイデア"
  offensive_ideas_bonus:0 "完成した攻勢アイデア"
  grand_army:0 "大陸軍"
- grand_army_desc:0 "我々は世界がこれまで見た中で、最大かつ最強の軍隊を作成することができる。"
+ grand_army_desc:0 "我が大陸軍は地上最強ォォーーーーッ！！"
  glorious_arms:0 "栄光の陸軍"
- glorious_arms_desc:0 "我々の栄光と権威ある軍隊の姿は、すべての敵を恐怖に震え上がらせる。"
+ glorious_arms_desc:0 "栄光あるわが陸軍を前にすれば、あらゆる敵は恐怖に震え上がるだろう。"
  bayonet_leaders:0 "銃剣指揮官"
- bayonet_leaders_desc:0 "十分に統率された兵士たちは後に続くのだから、我々は、確実に将校が最前線で指揮を執るようにしよう。"
+ bayonet_leaders_desc:0 "士官たちは、常に兵士たちを前線で指揮すべきだ。そうすれば、優れた兵士たちは必ずその後ろに続くだろう。"
  battlefield_commisions:0 "戦地昇進"
- battlefield_commisions_desc:0 "我々は軍の進歩に大きく力を注ぎ、それによって我々の軍の伝統を増やすことができる。"
+ battlefield_commisions_desc:0 "軍隊の発展に注力し、陸軍伝統を向上させよう。"
  improved_foraging:0 "徴発の改善"
- improved_foraging_desc:0 "伝統的に、我々は食糧供給の乏しい土地では効果的に戦うことができなかった。しかし、我々の軍隊はより大規模な軍隊が戦うための食糧の取得をよりうまく行えるようになっている。"
+ improved_foraging_desc:0 "我々はこれまで、大量の食糧を確保できないような場所では戦闘を行うのが困難だった。しかし、より多くの食糧を調達できるようになったことにより、大規模な軍隊を戦わせることが可能になった。"
  improved_manuever:0 "機動の改善"
  improved_manuever_new:0 "側面範囲の改善"
- improved_manuever_desc:0 "戦場で部隊を活用することは良き指揮官にとっての不可欠な技術だ。部隊をどこへ動かせば良いか知れる能力が有れば、自ずと優勢となるだろう。"
+ improved_manuever_desc:0 "優秀な指揮官にとって、戦場での機動に関する技術は何よりも重要だ。軍を動かすべき場所を知る者は、戦闘を優位に進めることができるだろう。"
  napoleonic_warfare:0 "団結心"
- napoleonic_warfare_desc:0 "伝統的な軍隊は階級の序列を維持するために激烈な規律の上に成り立っていたが、しかしながら、部隊の誇りを示せばより高い規律に至るのではなかろうか。"
+ napoleonic_warfare_desc:0 "これまで、軍隊は階級制度に基づく厳しい規律によって成り立ってきた。しかし、兵士たちの誇りに訴えかければ、さらに高い規律を生み出すことができるのではないか？"
  defensive_ideas:0 "防衛アイデア"
  defensive_ideas_bonus:0 "完成した防衛アイデア"
  engineer_corps:0 "工兵軍団"
- engineer_corps_desc:0 "優れた頭脳の持ち主たちを我が国に集められるようにすることで、彼らに軍事技術の分野の職を提示して、その比類なき功績を利用しなければならない。"
+ engineer_corps_desc:0 "我が国の最高の頭脳を軍隊のもとに結集し、彼らに活躍の場を与えよう。"
  military_drill:0 "軍事演習"
- military_drill_desc:0 "我々は軍事訓練に投資し、それによって陣形の形成や武器の扱いを改善し、軍の士気を高めることができるようになる。"
+ military_drill_desc:0 "このアイデアを取得すると、我々は軍事教練への投資を増やすことができるようになる。新しい陣形を編み出したり、よりよい武器の扱い方を学ばせたりすることを通して、陸軍の士気を上昇させることができる。"
  regimental_system:0 "連隊制度"
- regimental_system_desc:0 "我が軍を地域ごとの連隊に組織することで、軍隊を地域社会にまで根ざすことが出来る。それ故、我らがより大部隊を集めようと思ったとき、彼らをより早く再徴兵できるだろう。"
+ regimental_system_desc:0 "地域別に連隊を編成することにより、より地域社会に密着した軍隊を作ることができる。これにより、人員を補充する際にも、より効率的に動員を行うことができるだろう。"
  defensive_mentality:0 "防衛精神"
- defensive_mentality_desc:0 "攻撃は最善の防御であると考える者がいるが、それは愚かであり、彼らが我々の元へ来させた後に我々は迎撃する。我々の軍隊は頑強に守り、我々の要塞は長く守られるだろう。"
+ defensive_mentality_desc:0 "ある者は言った、攻撃は最大の防御であると。だがそれは愚かだ。彼らが攻撃して来るというのなら、迎撃すればいいではないか。わが軍の守りは堅い。要塞もとても堅固だ。"
  superior_firepower:0 "火力優勢"
- superior_firepower_desc:0 "最後の一撃を提供する前に大量の火力によって敵を破壊することは、我々の軍隊の強みの一つであり、我々は我々の指揮官がこれを理解していることを保証する。"
+ superior_firepower_desc:0 "敵の機先を制し、圧倒的な火力で敵を粉砕するという戦術は、わが軍の強みだ。士官たちもこのことを理解すべきである。"
  supply_trains:0 "補給の強化"
- supply_trains_desc:0 "作戦の消耗は最大の敵であるが、重要なことは、これらの損失を可能な限り迅速に置き換えるための兵士を取得することである。"
+ supply_trains_desc:0 "戦争を遂行する中では、消耗が最大の敵だ。そういった損失はできるだけ速やかに埋め合わせねばならない。"
  national_conscripts:0 "国民皆兵制"
- national_conscripts_desc:0 "兵役への登録を男性に義務づけることで、我々の軍隊の数を増加させる。"
+ national_conscripts_desc:0 "兵役を国民の義務とする。これにより、わが軍の兵員数は増加するだろう。"
  trade_ideas:0 "交易アイデア"
  trade_ideas_bonus:0 "完成した交易アイデア"
  shrewd_commerce_practise:0 "合理的商慣行"
- shrewd_commerce_practise_desc:0 "より洗練された交易慣行を利用することで、商人に競合相手に対する優位を与えることができる。"
+ shrewd_commerce_practise_desc:0 "このアイデアを取得すると、我が国の商人たちが他国に対して優位に立てるような、より優れた貿易制度を導入することが可能になる。"
  free_trade:0 "自由交易"
- free_trade_desc:0 "現在の商人の一族は、交易特権によって自分たちの排他的な保護を存続させようとしているが、我々はそれを望んでおらず、商人階級を成長させるつもりだ。"
- merchant_adventures:0 "冒険的商業主義"
- merchant_adventures_desc:0 "新しい交易路を探求し探検する機会のため、彼らの奉仕を提供することに熱心であることで、我々は富と名声を求める多くの交易商を利用することができる。"
+ free_trade_desc:0 "豪商たちは自分たちが持つ商業特権の独占状態を維持しようとしているが、我が国の商人階級全体の発展のためには、そのようなことを許すわけにはいかない。"
+ merchant_adventures:0 "商業的探検"
+ merchant_adventures_desc:0 "商人たちは富と名声のためなら必死に働く。彼らなら新たな交易路を発見できるかもしれない。"
  national_trade_policy:0 "統一的交易政策"
- national_trade_policy_desc:0 "国家の交易政策を採用することにより、商取引における存在を強化し、交易の有効性を高めることができる。"
- overseas_merchants:0 "海外商人"
- overseas_merchants_desc:0 "交易を拡大するためには、海外に住み、交易を支援している、適切な社会階級の人々に市民権を拡大する必要がある。"
+ national_trade_policy_desc:0 "交易政策を確定すれば、我が国の商人たちの国際競争力を高めることができるだろう。"
+ overseas_merchants:0 "在外商人"
+ overseas_merchants_desc:0 "海外に住み、我が国の貿易に携わっている商人たちに市民権を与えれば、我が国の貿易の拡大に繋がるだろう。"
  trade_manipulation:0 "交易操作"
- trade_manipulation_desc:0 "交易が何らかの形で進む可能性がある重要なチョークポイントでは、我々の交易収入の増加の鍵は、そこでの強みを得る能力である。"
+ trade_manipulation_desc:0 "交易収入拡大のカギは、各地の要衝において一定の地位を確保することだ。"
  fast_negotiations:0 "素早い商談"
- fast_negotiations_desc:0 "ときに交易協定を締結するための鍵は迅速さであることがある。我々は、商人が確実に取引を行えるようにする必要がある。"
+ fast_negotiations_desc:0 "迅速さが交渉におけるカギとなることがある。商人たちには確実に商談をまとめる力が求められるだろう。"
  economic_ideas:0 "経済アイデア"
  economic_ideas_bonus:0 "完成した経済アイデア"
  bureaucracy:0 "官僚機構"
- bureaucracy_desc:0 "国家の政府の役人が管轄する、より官僚的な統治制度を採用することで、我々の税収を増やすことができる。"
+ bureaucracy_desc:0 "官僚機構を整備することで、税収を増やすことができるだろう。"
  organised_construction:0 "組織的建築"
- organised_construction_desc:0 "政府の基盤は改良されなければならないが、それにはコストがかかる。工程を正しく構成すれば、これをより安く行うことができる。"
- smithian_economics:0 "スミス経済学"
- smithian_economics_desc:0 "重商主義に反対し、経済問題への国家の影響を制限することによって、全体の生産効率を向上させる自由市場を支援しなければならない。"
+ organised_construction_desc:0 "インフラ整備は国家の責務だが、それには多大なコストがかかる。適切な工程に基づいて建設を行うことで、コスト削減ができるだろう。"
+ smithian_economics:0 "神の見えざる手"
+ smithian_economics_desc:0 "重商主義は間違いだ。国家は経済に介入すべきではない。我が国の生産力を高めるには、自由な市場を作るべきだ。"
  national_bank:0 "国立銀行"
- national_bank_desc:0 "金融問題のために中央の権威を確立することで、我々は国の経済をよりよく制御できるだろう。"
+ national_bank_desc:0 "我が国の経済をうまく制御するために、金融問題に対処する際に中心となる機関を設立すべきだ。"
  debt_and_loans:0 "債務と借款"
  debt_and_loans_desc:0 "債務は時に避けられないこともあるが、組織化された貸付市場は、より低い金利で貸付を発行させることができる。"
  centralization:0 "中央集権化"
@@ -320,7 +320,7 @@
  naval_glory:0 "海軍の栄光"
  naval_glory_desc:0 "我々の栄光と権威ある海軍の姿は、すべての敵を恐怖に震え上がらせる。"
  grand_navy:0 "大海軍"
- grand_navy_desc:0 "我々は世界がこれまで見た中で、最大かつ最強の艦隊を作成することができる。"
+ grand_navy_desc:0 "このアイデアを取得することで、我々は歴史上最大にして、最強の海軍を建設することができるだろう。"
  sea_hawks:0 "大海の覇者"
  sea_hawks_desc:0 "我々は軍の進歩に大きく力を注ぎ、それによって我々の海軍の伝統を増やすことができる。"
  excellent_shipwrights:0 "優れた船大工"
