--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -207,7 +207,7 @@
  LANDING_dlc021_TEXT:1 "主な要素：\n- 共和独裁制\n- 商人共和国向け新派閥\n- オランダ共和国用の特別な選挙\n\n追加要素：\n- 選挙君主制に賛成あるいは反対する新しい行動\n- 商人共和国は交易所を設置可能\n- 共和国向けの新しいイベント"
  LANDING_dlc021_FLAVOR_TEXT:2 "「Res Publica」は民衆を支配し、国家を統治するための新しいユニークな方法に焦点を当てます。\n\n新しい政府タイプの導入を特徴とするこのDLCは、共和制・独裁制のための新しいゲームプレイ要素に加え、探検のための新しいアイデアグループも提供します。「Res Publica」は、プレイヤーが交易帝国を拡大しながらボーナスを受け取る新しい方法を体験可能にすることで、統治と探検の技術を向上させます。"
  LANDING_dlc027_TEXT:0 "主な要素：\n- 三十年戦争と宗教連盟の特別なシステム\n- 革命あるいは反革命のための戦い\n- 包囲からの突撃と、戦時の同盟国への目標の指示\n- ワンクリックで船をアップグレード\n- 外交オプションの改善\n\n追加要素：\n- 辺境伯の作成\n- 中核州の放棄"
- LANDING_dlc027_FLAVOR_TEXT:2 "三十年戦争及び教会と国家間の争いを中心に、このDLCでは支配と勝利の探求の最前線に戦争を置くようゲームプレイシステムを改良しました。\n\n改良された海戦と完全な軍隊の制御は、勝利への道があなたの肩にかかっていることを意味します。単独での勝利か、同盟国の戦力を頼りにするか、あなたはどちらを選択するでしょうか？その決断は帝国のその後の存亡を決めるでしょう。"
+ LANDING_dlc027_FLAVOR_TEXT:2 "このDLCは三十年戦争や国家と教会の争いなどを中心に、様々なシステムを追加します。戦争こそが、あなたの勝利を目指す冒険における最上の策となるでしょう。\n\n海軍、陸軍の仕様が改善された今、勝利の道はあなたの双肩にかかっています。独力で勝利を収めるか、それとも同盟国の力を借りるか、あなたはどちらの道を選ぶでしょうか？あなたの決断が、帝国の存亡を決めるのです。"
  LANDING_dlc033_TEXT:0 "主な要素：\n- カスタム国家のデザイナー\n- ナワトル、インティとマヤ信仰向けの新しい要素\n- 黄金の七都市の捜索\n- 財宝艦隊\n- 交易船団での海賊狩り\n- トルデシリャス条約"
  LANDING_dlc033_FLAVOR_TEXT:1 "キャンペーンの開始国をカスタマイズし、EU4のほぼ無限の再生可能性をさらに強化する新しい国家デザイナーを使用して、プレイスタイルに完全に適合する領域を作成しましょう。\n\n中央及び南アメリカに焦点を当てるこのDLCは新しい宗教を導入する一方で、インパクトのある探検の舞台では、あなたは王や征服者にふさわしい新たな決断を迫られるでしょう。アステカとして、メキシコ平原をあなたの支配下に置きましょう、しかし、あなたの怒れる神々に生贄を捧げるのに十分な臣下の王たちを確保しましょう。ヨーロッパの国家として、失われた都市や魔法の泉の噂を求め、アマゾンのジャングル深くに入りましょう。"
  LANDING_dlc039_TEXT:0 "主な要素：\n- 議会\n- プロテスタントと仏教向けの新しいゲームプレイ\n- 従属国の新しい相互作用\n\n追加要素：\n- 信仰\n- 神聖ローマ帝国の自由都市"
