Save/Update files [ci skip]

--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -535,16 +535,16 @@
  conqueror_personality_die_desc:0 "我々の敵はきっと、[Root.Monarch.GetHerHis]の逝去によって救われるでしょう。"
  no_personality_die_desc:0 "[GetSheHeCap]は重要なことの多くを達成できずに、あまりにも早く死去しました。"
  glory_seeker_personality_die_desc:0 "[GetHerHisCap]が勇敢に戦う姿を、我が部隊は哀惜の念をもって思い出すでしょう。"
- born_to_the_saddle_personality_die_desc:0 "[GetHerHisCap]の騎兵隊は彼ら自身の一部であるかのように[GetHerHim]を悼んでいます。"
+ born_to_the_saddle_personality_die_desc:0 "[GetHerHisCap]の騎兵隊は[GetHerHim]を自身の一部であったかのように悼んでいます。"
  defensive_planner_personality_die_desc:0 "[GetHerHis]は部隊の安全にとても配慮していました。"
  battlefield_medic_personality_die_desc:0 "[GetHerHis]は部隊の健康にとても配慮していました。"
  ruthless_personality_die_desc:0 "[GetHerHisCap]の冷酷な戦術は、我々の敵に大きな恐怖を抱かせることができました。"
  inspirational_leader_general_personality_die_desc:0 "[GetHerHisCap]の人々を鼓舞する演説は、兵士たちの間で記憶されるでしょう。"
- master_of_arms_personality_die_desc:0 "[GetHerHisCap]の歩兵隊の騎乗兵は[GetHerHim]を彼らの一人として悼んだ。"
+ master_of_arms_personality_die_desc:0 "[GetHerHisCap]の歩兵隊の騎乗兵は[GetHerHim]を自身の一部であったかのように悼んでいます。"
  goal_oriented_personality_die_desc:0 "[GetHerHisCap]の時宜を得た到着は多くの戦闘を救いました。"
  hardy_warrior_personality_die_desc:0 "単に[GetHerHisCap]の存在だけで、苦難の最悪の事態を緩和するように見えました。"
  siege_specialist_personality_die_desc:0 "[GetHerHisCap]の包囲技術へのこだわりは、あらゆる投資を価値あるものとしました。"
- cannoneer_personality_die_desc:0 "砲兵隊は[GetHerHis]の死を[GetSheHe]が自身の一部であったかのように嘆いています。"
+ cannoneer_personality_die_desc:0 "砲兵隊は[GetHerHis]の死を[GetSheHe]が自身の一部であったかのように悼んでいます。"
  extortioner_personality_die_desc:0 "[GetHerHisCap]の崩御は、我々を除くあらゆる国籍の交易商たちを大いに喜ばせるでしょう。"
  ruthless_blockader_personality_die_desc:0 "海岸全域の港湾の市民は今や、より簡単に呼吸することができます。"
  buccaneer_personality_die_desc:0 "[GetHerHim]を失ったことで、我々の敵は再び航海をより安全に感じるでしょう。"
