Save/Update files [ci skip]

--- a/source/localisation/institutions_l_english.yml
+++ b/source/localisation/institutions_l_english.yml
@@ -46,7 +46,7 @@
  OPEN_CLOSE_INSTITUTIONS:0 "制度を、開く/閉じる"
  HEADER_PRESENT_INSTITUTIONS:0 "§Y現在の制度§!"
  HEADER_GROWING_INSTITUTIONS:0 "§Y制度の伝播：§!"
- GROWING_INSTITUTION:0 "月毎の$NAME$の$VAL$、$PER_MONTH$"
+ GROWING_INSTITUTION:0 "$NAME$：$VAL$、$PER_MONTH$/月"
  GROWTH_MODIFIER:0 "伝播の効果"
  SCALED_INSTITUTION_DESC:0 "*がついた効果はその州の開発度に応じて変化し、もし開発度が増えたならば効果も増える。"
  MODIFIERS_AFFECTING_INSTITUTION_SPREAD:0 "$INSTITUTION|Y$の広がりに影響を与えるすべての効果：\n"
