--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1043,7 +1043,7 @@
  MARREQTITLE:0 "王室間の婚姻"
  MARREQDESC:0 "$ACTOR$の君主が、我々の主権君主の家族との王室間の婚姻を希望している。これにより両国はより緊密になることだろう。"
  ASKMARCHDESC:0 "属国の$ACTOR$が、辺境伯に指定されることを望んでいます。辺境伯として、彼らは我々にいかなる税も払うことはありませんし、我々は彼らを併合することはできませんが、彼らは以下のボーナスを得るでしょう："
- LEGITI_IMPACT:0 "取り決めに調印すると、我々の正統性は彼らの威信と正統性が劣っているため、$VAL$されるでしょう。"
+ LEGITI_IMPACT:0 "彼らの威信と正統性が劣っているため、取り決めに調印すると、我々の正統性は$VAL$されるでしょう。"
  MARREFUSEDESC:0 "$ACTOR$は我々の提案を拒否しました。"
  MARACCEPTDESC:0 "$ACTOR$は我々の提案を受け入れました。"
  MARREFUSEBUTTON:0 "何てことだ！"
@@ -1907,10 +1907,10 @@
  DECWARREQDESC:0 "宣戦布告は時により外交の最終手段です。宣戦布告はそれを行う正当な理由がない場合は特に他国からの評価を悪化させます。我々の安定度が低下する場合もあります。本当に実行しますか？"
  alert_troops_in_foreign_territory_instant:0 "§Y放浪軍の存在§!"
  alert_troops_in_foreign_territory_delayed:0 "$LIST$にいます。"
- IN:0 "が"
- MORE_THAN_THREE_PROV:0 "3以上の州で可能です。"
- MORE_THAN_LIMIT_PROV:0 "$LIMIT$以上の州で可能です。"
- alert_build_province_improvement_instant:0 "§Y州を改善する建設が可能§!"
+ IN:0 "："
+ MORE_THAN_THREE_PROV:0 "3州以上"
+ MORE_THAN_LIMIT_PROV:0 "$LIMIT$州以上"
+ alert_build_province_improvement_instant:0 "§Y州の改善が建設可能§!"
  alert_build_province_improvement_delayed:0 "$LIST$"
  DECWARDESC:0 "この項目を選択すると敵へ和平条約を提案することが可能になります。"
  alert_advisor_slot_instant:0 "§Y顧問の雇用枠に空き§!"
@@ -3827,7 +3827,7 @@
  harvest_fails:0 "収穫の失敗"
  desc_harvest_fails:0 "この地域で収穫は不作となり、香辛料の生産が減少した。"
  counter_revolution:0 "反革命"
- desc_counter_revolution:0 "革命政府は欧州の大陸に解き放たれた。我が国の貴族は我々が準備して、戦争を行おうとしていると感じているようだが、そんなことはない。他の欧州列強が我等を惰弱と考えている間に、革命派の宣伝は国内に広がり、政府を蝕んでいる。戦争党の言うことに耳を傾けようか？"
+ desc_counter_revolution:0 "革命政府が欧州大陸に解き放たれた。我が国の貴族は我々が準備して、彼らとの戦争を行おうとしていると感じているようだが、そんなことはない。他の欧州列強が我々を惰弱と考えている間も、革命派の宣伝は国内に広がり、政府を蝕んでいる。主戦派の言うことに耳を傾けようか？"
  vive_la_revolution:0 "ヴィヴ・ラ・レヴォリュスィオン"
  desc_vive_la_revolution:0 "我々の革命政府は、我々の主張に敵対する勢力との戦いを繰り広げている。人々が主張のもとに結集しており、我々の軍隊には革命への熱意が表れている。"
  reaction:0 "反動"
@@ -6979,7 +6979,7 @@
  YEARLY_PAPAL_INFLUENCE:0 "年間教皇への影響力"
  YEARLY_CHANGE:0 "年間変化"
  CURRENT_PAPAL_INFLUENCE:0 "教皇への影響力：§Y$VAL$§!"
- MONTHLY_PAPAL_INFLUENCE:0 "あなたは毎年、$VAL$の教皇への影響力を得ることができます。"
+ MONTHLY_PAPAL_INFLUENCE:0 "あなたは教皇への影響力を毎年$VAL$得ることができます。"
  CATHOLIC_PAPAL_INFLUENCE:0 "基本値："
  CARDINALS_PAPAL_INFLUENCE:0 "支配下にある枢機卿から："
  PAPAL_RELATIONS:0 "教皇領との関係"
