--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -16,7 +16,7 @@
  orthodox_icon_events.3.d:0 "最近の[michael_icon_church_province.GetName]での動員で新規に入隊した者はかつてない数に上った。地元の聖職者は、これは我らの聖ミハイルの聖像がもたらした広範な宗教的熱狂によるものだと確信している。彼らは若い男たちが大将軍の聖像を見にこの地域の全域からやってきて、信仰の名の下に戦争へと向かう強い意志と共にこの地を離れていることを報告している。"
  orthodox_icon_events.3.a:0 "戦闘準備！"
  orthodox_icon_events.4.t:0 "全能者ハリストス"
- orthodox_icon_events.4.d:0 "国中の教会のドームの多くに描かれた、全ての支配者たる、全能者ハリストスは天上から見ている。聖障にて最も中央の聖像に対する我等の尊崇と広大にわたる配慮は思索の源となっているようだ。創造と[Root.Monarch.GetTitle]の中での正しき位置における彼の役割を思うと、多くの者は彼らの生活と統治する政府にもっと満足するだろう。"
+ orthodox_icon_events.4.d:0 "国中の教会のドームの多くに描かれた、全ての支配者たる、全能者ハリストスは天上から見ている。聖障にて最も中央の聖像に対する我々の尊崇と広大にわたる配慮は思索の源となっているようだ。創造と[Root.Monarch.GetTitle]の中での正しき位置における彼の役割を思うと、多くの者は彼らの生活と統治する政府にもっと満足するだろう。"
  orthodox_icon_events.4.a:0 "彼の者は王国のために。"
  orthodox_icon_events.5.t:0 "三賜物のニコライ"
  orthodox_icon_events.5.d:0 "我々の聖ニコライへの崇拝は[benevolent_if_distant_neighbor.GetName]から最近来た外交団にいた商人の一人に大きな感銘を与えたようだ。その商人は[nicholas_icon_was_here.GetCapitalName]にある聖ニコライの聖像に、その聖人の物語に、そしてニコライの伝説への我々の信心にそれはそれは感動し、三つの品をささげることに決めた。一つの贈り物は彼が聖像を見たところの大聖堂へと行き、一つはそれを作った芸術家のところへ行き、一つはそれに資金を出した後援者のところに行った。"
@@ -36,7 +36,7 @@
  siberian_events.2.d:0 "荒漠とした領域ではあるものの、川を渡ることができるため、シベリアは無人の土地というわけではない。多くの地元の部族と酋長が住んでいるのだ。彼らの一部は毛皮を売る方が良いと考え、また別の者は我々の保護と引き換えに同じ産品を税として納めるよう説き伏せられた。\n$YEAR$は住民にとっては非常にたくさんの生産物が獲れたか、それとも徴税官はめったにないほど効果的に貢納を集めることが出来たか、どちらにしてもヤサークは今年期待していたよりもずっと多い産物を持ってきた。"
  siberian_events.2.a:0 "素晴らしい。"
  siberian_events.3.t:0 "プロムィーシリェンニキ"
- siberian_events.3.d:0 "シベリアに大量にいる毛皮を持つ動物たちは紛れもなく貴重な発見であり、それは我が国のみならず、我が国の貧しい農奴や都市民にも言えることだ。冒険心を持つ者達にとって、毛皮狩りや交易探検そして開拓の最前線基地を越えた遠くへの旅はますます普通のこととなっている。彼らが戻るとき、彼らは[russian_center_of_trade.GetName]の幸運な帰還というに見合う貴重な川獺やリスの毛皮を携えている。\n時に富を求めるものはより遠くへと行きたがる。我等の「交易商人」の殺人的な行為は[siberian_frontier_province.GetName]の部族の者を激怒させ、その土地への植民を危険なものとしている。"
+ siberian_events.3.d:0 "シベリアに大量にいる毛皮を持つ動物たちは紛れもなく貴重な発見であり、それは我が国のみならず、我が国の貧しい農奴や都市民にも言えることだ。冒険心を持つ者達にとって、毛皮狩りや交易探検そして開拓の最前線基地を越えた遠くへの旅はますます普通のこととなっている。彼らが戻るとき、彼らは[russian_center_of_trade.GetName]への幸運な帰還というに見合う貴重な川獺やリスの毛皮を携えている。\n時に富を求めるものはより遠くへと行きたがる。我々の「交易商人」の激烈な行為は[siberian_frontier_province.GetName]の部族民を激怒させ、その土地への植民を危険なものとしている。"
  siberian_events.3.a:0 "これについてできることはない。"
  siberian_events.3.b:0 "領民を統治する必要がある。"
  siberian_events.4.t:0 "コサックの探検"
@@ -56,7 +56,7 @@
  serfs_moving_away:0 "農奴の逃亡"
  desc_serfs_moving_away:0 "農奴の移動はひどく制限されていたが、この地域の農奴たちは、自分の土地とそこの領主から逃げ出すために、あらゆる策略をめぐらし、逃げ道を使っている。"
  confiscated_appanage:0 "領土の拡大"
- desc_confiscated_appanage:0 "我等の高貴な兄弟たちの死に続き、我らは税金と改良を目的とした土地への交通をより良いものとするためにこの州における国家の領域拡大をした。"
+ desc_confiscated_appanage:0 "高貴なる兄弟の死後、我々は課税と改良のための土地へのアクセスをより良いものとするためにこの州における国家領域を拡大をした。"
  tatar_feudatories:0 "タタール人の家臣たち"
  desc_tatar_feudatories:0 "教会は認めないかもしれないが、我々は兵役と引き換えに我が国住むムスリムのタタール人に権利を与えている。"
  tatar_feudatory_province:0 "タタール人の家臣"
@@ -76,7 +76,7 @@
  russian_principality_events.3.a:1 "ボヤールを重用し続けていこう。"
  russian_principality_events.3.b:1 "もっと小さな土地所有者に土地を配ろう。"
  russian_principality_events.4.t:0 "土地取得"
- russian_principality_events.4.d:0 "[Root.GovernmentName]の中央の力は着実に伸びており、中央アジアのハーンに送るべき品がなくなれば、それでこれは我らの自由な収入だ。珍しい豊作によって、相当の黒字となった。これをもって雨の日のために金庫を満たすこともできたが、我等はこれを小領主や修道僧を求めるために使うこともできるだろう。"
+ russian_principality_events.4.d:0 "[Root.GovernmentName]の中央権力は着実に伸びており、中央アジアのハーンに送るべき品がないため、これは我々の自由な収入である。異常なほどの豊作で、かなりの余剰が出てきた。これをもって雨の日のために金庫を満たすこともできるが、小領主の土地や修道院領を獲得するのに使うこともできるだろう。"
  russian_principality_events.4.a:0 "土地こそ真の富だ。"
  russian_principality_events.4.b:0 "王室財産のために金が必要だ。"
  russian_principality_events.4.c:0 "国政における影響力を増すために使うべきだ。"
@@ -131,7 +131,7 @@
  russian_tsardom_events.5.a:0 "素晴らしいアイデアだ。"
  russian_tsardom_events.5.b:0 "[Root.Monarch.GetName]は真の[Root.Monarch.GetTitle]であり、そのような援助は不要である。"
  russian_tsardom_events.6.t:0 "官僚機構の拡大"
- russian_tsardom_events.6.d:0 "我等の[Root.GovernmentName]が拡大するにつれ、より多くの人が管理する必要がでてきた。かつては、地方の州政府に頼っていたが、時が過ぎ、中央官庁の人員、[Root.GetAdjective]のプリカース、を増加させる必要がどんどん大きくなっていた。\n我々がすぐに基幹人員を増やさなければ、後々には、官僚機構が増え続けるために起こるより経験のある事務官への要求に答えることができなくなるだろう。"
+ russian_tsardom_events.6.d:0 "[Root.GovernmentName]が拡大するにつれ、管理人員を増やす必要がでてきた。かつて地方の州政府に頼っていたが、時が過ぎ、中央官庁の人員、[Root.GetAdjective]のプリカースを増加させる必要性がどんどん大きくなっている。\n我々がすぐに基幹人員を増やさなければ、後々には、官僚機構が増え続けるために起こる、より経験のある事務官への要求に答えることができなくなるだろう。"
  russian_tsardom_events.6.a:0 "官僚をより多く任命しろ。"
  russian_tsardom_events.6.b:0 "我が国にいる者で間に合わせられる。"
  russian_tsardom_events.7.t:0 "裏切り者？"
@@ -140,7 +140,7 @@
  russian_tsardom_events.7.b:0 "確かに、その土地の貴族を恐れる必要などない。"
  russian_tsardom_events.8.t:0 "人の不足"
  russian_tsardom_events.8.d:0 "州の数の増加に対応するために、我が国の支配のもと、官庁の事務員を任命するにあたって幾分かの自由裁量を州知事に与えなくてはならない。[state_with_problems.GetAreaName]では、この結果税を払う農民と兵役を果たすものが減少した。\n行政において事業を行うことができる者たちを規制するように動いて、我が国の軍隊と財源に人が不足しないことを確実にするよう、中央政府から強く提案されている。"
- russian_tsardom_events.8.a:0 "我等は官僚集団が必要だ。"
+ russian_tsardom_events.8.a:0 "もっと事務官が必要だ。"
  russian_tsardom_events.8.b:0 "兵士と農民が行政に従事することを制限しよう。"
  russian_tsardom_events.9.t:0 "外国人将校"
  russian_tsardom_events.9.d:0 "他の欧州諸国からきた将校にとって、[Root.GetName]で雇用を探すことはますます一般的になってきた。ある面では、これは他日戦争における優位に繋がるだろうが、一方で彼らの求める給与は安くなく、我が国の将校にとっては軍内部で地位を得られずに自分たちが軽視されていると感じるかも知れない。"
@@ -167,21 +167,21 @@
  fugitive_christian_converts:0 "逃亡者のキリスト教への改宗"
  desc_fugitive_christian_converts:0 "この州では周囲の非キリスト教地域からの逃亡者の流入を受け入れている。逃亡者は我が国の宗教を受け入れ我が国に忠誠を誓うことを切望しているが、このことで州の緊張が高まっている。"
  corrupt_governor_modifier:0 "地域の譲歩"
- desc_corrupt_governor_modifier:0 "収賄知事は地域住民を非常に敵対的なものとした。我等は彼らを保証するいくつかの地域の法令の制定を約束した。"
+ desc_corrupt_governor_modifier:0 "収賄知事は地域住民を非常に敵対的なものとした。我々は彼らを保証するいくつかの地域の法令の制定を約束した。"
  custom_yearly_harmony:1 "宗教行事"
- custom_yearly_harmony_desc:1 "他の多くの者がそうするよりも、我等は全く宗教的な見方を支持するもので、それゆえ国家の調和を強化する。"
+ custom_yearly_harmony_desc:1 "他の多くの民族以上に、我々は厳格な宗教観を持ち、国の調和を強めている民族である。"
  custom_harmonization_speed:1 "地域社会の統合"
  custom_harmonization_speed_desc:1 "信仰の調和をうまく行うためには、地域社会全体を我々の中心地域から新たに獲得した土地へ移動させるのがずっと楽だろう。"
  custom_meritocracy:1 "厳格な審査"
  custom_meritocracy_desc:1 "規格の最高水準のために、心理を受ける者たちを保持しておくことで、我々は知性の最も高きものは彼らのような我らの行政を助けてくれるものだと確信するのだ。"
  custom_monarch_admin_power:1 "法の教育"
- custom_monarch_admin_power_desc:1 "我等の王朝から生まれる者は、統治の結果、決して教育が行き届いていなくてはならない。君主となるであろう我らの人達への教育は厳格で普遍的なものでなくてはならない。"
+ custom_monarch_admin_power_desc:1 "我らが王朝から生まれる者は、統治という事柄において教育を欠いてはならない。君主となるであろう者達への教育は厳格で普遍的なものでなくてはならない。"
  custom_max_absolutism:1 "最高憲法"
  custom_max_absolutism_desc:1 "我が国の統治者は最も完璧にして地上で最高の人間であると、我が国の精神に書かれており、それは全ての人間の法の上に立ち、彼の人々の上に判断するものはなく、我が国土の完全な支配をもって前進するのだ。"
  custom_yearly_absolutism:1 "疑う余地なき権威"
  custom_yearly_absolutism_desc:1 "代議制と自治権の制限の概念は、我が国にとって毒のようなものだ。我が人民は、中央政府の絶対的な意思にすべて答えるだろう。"
  custom_administrative_efficiency:1 "冷酷な行政"
- custom_administrative_efficiency_desc:1 "我が国の行政が一様に流れを確実にするために多くの領収書と残高がある。それらの大半を無視して、我が国の主要政策に拡大することを定めれば、我等は早くもっと領土を要求できるだろう。"
+ custom_administrative_efficiency_desc:1 "我が国の統治が一様に流れるようにするために多くの抑制と均衡がある。それらの大半を無視して、拡大を我が国の主政策にすれば、もっと迅速に多くの領土を獲得できるだろう。"
  custom_institution_spread_from_true_faith:1 "宗教の同胞達"
  custom_institution_spread_from_true_faith_desc:1 "信仰の同胞達と共に、彼らの言葉は最高の言葉ではないが少なくとも核となる部分は真実であるという信頼感を心にとめ、我らは新しく役に立つ考えを広げる手助けをしよう。"
  custom_global_institution_spread:1 "新思想の最前線"
@@ -207,11 +207,11 @@
  custom_state_maintenance_modifier:1 "州の引当金"
  custom_state_maintenance_modifier_desc:1 "我が国の州知事に特権と許可を与えることで、地域の事業への費用を僅かだが節約することができる。"
  custom_autonomy_change_time:1 "柔軟な支配"
- custom_autonomy_change_time_desc:1 "国家として、最低限の支配が彼らにとって最良の統治かを見るために地方の状況を判断して、我等は国民をどれだけ強く引き付けているかに関して実際的にならざるをえない。"
+ custom_autonomy_change_time_desc:1 "国家として、最低限の支配が民衆にとって最良の統治かを見るために地方の状況を判断しながら、国民をどれだけ強く引き付けているか実利的に判断すべきだ。"
  custom_merc_discipline:1 "徴兵基準"
- custom_merc_discipline_desc:1 "出世する者との取引によって我等自身の名誉を汚した時は、少なくとも我らは最も有能な戦闘員に委任することを確実としよう。"
- custom_rival_border_fort_maintenance:1 "国境にいる集団"
- custom_rival_border_fort_maintenance_desc:1 "敵国の土地との境に住んでいる地域の集団は、彼らの防衛を財政的に助けてもらうことが、彼らの最大の関心事であると確信しうるだろう。"
+ custom_merc_discipline_desc:1 "運のいい兵士と相対して自分自身を汚す時は、少なくとも最も有能な戦闘員に請け負わせるようにすべきだ。"
+ custom_rival_border_fort_maintenance:1 "国境の共同体"
+ custom_rival_border_fort_maintenance_desc:1 "敵国の土地との境に住んでいる共同体は、彼らの防衛を財政的に助けてもらうことが、彼らの最大の関心事であると確信しうるだろう。"
  custom_siege_blockade_progress:1 "堅い封鎖"
  custom_siege_blockade_progress_desc:1 "ある州を降伏させるために港を封鎖している際には、船は惜しまず一切の補給を通さないよう、我らの船長に指示しよう。"
  custom_cav_to_inf_ratio:1 "戦闘の組織化"
@@ -265,7 +265,7 @@
  custom_monarch_diplomatic_power:1 "国際人の育成"
  custom_monarch_diplomatic_power_desc:1 "交渉の場で太刀打ちできない有能な統治者はいない。全ての将来の統治者の育成は、故郷の宮廷に加え、外交上の微妙な意味の差を学ぶための遠方での教育も含めるべきだ。"
  custom_liberty_desire_from_subject_development:1 "海外の計画"
- custom_liberty_desire_from_subject_development_desc:1 "我等の海外の従属国の土地への投資の奨励によって、自分たちで統治できるほどになっても彼らは我らに感謝するだろう。"
+ custom_liberty_desire_from_subject_development_desc:1 "海外の従属国の土地への投資の奨励によって、自分たちで統治できるほどになっても彼らは我らに感謝するだろう。"
  custom_reduced_liberty_desire_on_same_continent:1 "閲兵"
  custom_reduced_liberty_desire_on_same_continent_desc:1 "近くの従属国に我が国の軍事能力を示し続けることで、彼らがこの巨大な組織のどこにいるかを確認させるべきだ。"
  custom_naval_tradition_from_battle:1 "捕虜となった船員"
@@ -275,11 +275,11 @@
  custom_sunk_ship_morale_hit_recieved:1 "苛烈な海軍訓練"
  custom_sunk_ship_morale_hit_recieved_desc:1 "海の底へ同盟国の船が沈んでいくのを見ることは船員の鋭気をくじきかねない。効果的な訓練によって、我が国の水兵は状況が過酷となっても、勇気ある表情を見せることができる。"
  custom_global_naval_engagement_modifier:1 "適応する海軍教義"
- custom_global_naval_engagement_modifier_desc:1 "海で戦術無きことが疑いのないこととしておかなくてはならない。我等は状況に適応して、あらゆる遭遇で優位を確保しなくてはならない。"
+ custom_global_naval_engagement_modifier_desc:1 "海に戦術が無いことを疑問の余地がないことにすべきである。状況に適応して、あらゆる遭遇において優位性を確保すべきだ。"
  custom_global_ship_trade_power:1 "積極的な交易手続き"
  custom_global_ship_trade_power_desc:1 "時機というのは取引のすべてである。長く待ちすぎては、今が将来の交易の旅のために不都合になるだろう。交易の交渉の激しさに伴い、我らの交易船団は港から港への移動をより楽にできる。"
  custom_native_assimilation:1 "原住民との交渉"
- custom_native_assimilation_desc:1 "誰もが値段をつけるのだ。その地域の原住民の首長から買収することで、我が新らしき土地の原住民たちが我等の利益のために働くことを確実にできる。"
+ custom_native_assimilation_desc:1 "誰にでも値段がある。その地域の原住民の首長を買収することで、我が新らしき土地の原住民たちが我々の利益のために働くことを確実にできる。"
  custom_native_uprising_chance:1 "ガラス玉と毛布"
  custom_native_uprising_chance_desc:1 "火と剣は確かに原住民の驚異への一つの対処であるが、それが唯一の手段ではない。親しみを込めた言葉とともに原住民に近づくことで、我らの途上から彼らを遠ざけ、妨害させることなく、我らの居住地を建設することを可能とする。"
  custom_reduced_liberty_desire:1 "保護協定"
@@ -309,7 +309,7 @@
  custom_recover_navy_morale_speed:1 "自由へ漕ぎ出せ"
  custom_recover_navy_morale_speed_desc:1 "海で奴隷となった男が解放されることを目指せるような適切な制度があることで、海での過酷な時間にも対応できるより打たれ強い船員を確保できる。"
  custom_global_foreign_trade_power:1 "砲艦外交"
- custom_global_foreign_trade_power_desc:1 "我等の言葉の後ろに強大な海軍の優位性を置くことで、海外で我が国の商人に特恵の処置を与えらることを確実にできる。"
+ custom_global_foreign_trade_power_desc:1 "言葉の後ろに強大な海軍の優位性を置くことで、海外で我が国の商人に特恵待遇を与えられることを確実にできる。"
  custom_improve_relation_modifier:1 "経験豊かな外交官"
  custom_improve_relation_modifier_desc:1 "外国の言語や微妙な意味の違いに精通している最も優秀で明晰な外交官をそばに置いておくことは、境界を越えた際に言い繕うための時間を確保できる。"
  custom_possible_condottieri:1 "傭兵の伝統"
@@ -354,27 +354,27 @@
  streltsy_events.5.a:0 "素晴らしい。"
  streltsy_events.6.t:0 "プリカースの拡大"
  streltsy_events.6.d:0 "ストレリツィを雇用する中で、国家は専門的な歩兵の信頼できる供給源を求めていた。彼らの給与を管理するために、国家は効率的な官僚制を維持することを必要としていた。もし、ストレリツィ・プリカースを拡大するなら、より早く効果的により大規模なストレリツィを組織し、訓練し、補給できる。ある者は、重視された速度に対する相応の費用があると警告するのだけれども。"
- streltsy_events.6.a:0 "我等は努力を増やそう。"
+ streltsy_events.6.a:0 "取り組みを増やしていこう。"
  streltsy_events.6.b:0 "費用を増やさなくてはならない。"
- streltsy_events.6.c:0 "今は、この権利は必要ない。"
+ streltsy_events.6.c:0 "今はその必要はない。"
  orthodox_cathedral:0 "改装された大聖堂"
  desc_orthodox_cathedral:0 "地方の大聖堂を修復、改装するために費用を費やしたことで、住民の信用を勝ち得た。"
  took_land_from_monastics:0 "越境紛争"
- desc_took_land_from_monastics:0 "我等の階級が始め、地元の修道院が終えた紛争があった。終わりには、我らの解釈が勝ったことが確認されたが、地元の賛同はあまり得られず、このことで遠くない将来にわたって地域全体を開発することが困難となった。"
+ desc_took_land_from_monastics:0 "我々の階級が始め、地元の修道院が終えた紛争があった。終わりには、我々の解釈が勝ったことが確認されたが、地元の賛同はあまり得られず、このことで遠くない将来にわたって地域全体を開発することが困難となった。"
  rooting_out_heresy:0 "地方の異端審問を支援"
  desc_rooting_out_heresy:0 "この国では、大主教の元で、宗教への帰依と異端の根絶を確かなものとするために、異端審問が進められている。"
  saints_enforced:0 "宗教の一致"
- desc_saints_enforced:0 "我等は、支配に強く不満を持つ人々を犠牲にしても、この地域の人々を我が国の宗教的慣習に従わせた。しかしながら、それによって時間を経て我が国の社会に彼らを統合できるだろう。"
+ desc_saints_enforced:0 "我々は、支配に強く不満を持つ人々を犠牲にしても、この州の人々を我が国の宗教的慣習に従わせたてきた。しかしながら、それによって時間を経て我が国の社会に彼らを統合できるだろう。"
  patriarch_events.1.t:0 "[local_saint_state_province.GetAreaName]の聖人"
  patriarch_events.1.d:0 "[local_saint_state_province.GetAreaName]の大主教管区では非常に不確かだ。我が国は信仰によって纏まっているのだが、その州の人々は地元の聖職者も含めて、国境の内側で慣例となった聖人の祝祭や儀式に参加することを拒否する。彼らはそれを聖典に基づかないと言い、またその地域で多くの尊崇を集めた聖人も含めた彼らの先祖達からの宗教的慣習の儀礼を執り行うのだという。"
- patriarch_events.1.a:0 "我等は[Root.GetAdjective]の聖人や祭りを強要しなくてはならない。"
+ patriarch_events.1.a:0 "[Root.GetAdjective]の聖人や祭りを強要しなくてはならない。"
  patriarch_events.1.b:0 "主張することで得られるものは少ない。"
  patriarch_events.2.t:0 "典礼の影響"
  patriarch_events.2.d:0 "[local_see_province.GetAreaName]の司教は[Root.Monarch.GetName]と[Root.Monarch.GetSheHe]が[local_see_province.GetCapitalName]の聖堂の建設を指揮したことの拡大に反対をしている。彼は、我らが与えた大規模な寄付に感謝していないわけではないと述べているが、司教は[Root.GovernmentName]の興味を引くために教会法を破るという使いかたを疑問に思っている。"
  patriarch_events.2.a:0 "身の程を教えてやる！"
  patriarch_events.2.b:0 "謙虚さを示すために、さらなる寄付を教会に行なおう。"
  patriarch_events.3.t:0 "[local_see_province.GetName]の大聖堂"
- patriarch_events.3.d:0 "[local_see_province.GetName]の大聖堂は損傷しており、早急に修理する必要がある。大主教は我らが修理の資金を支援してくれることを期待し、また主教座の改装も教会にとっては極めて有益であろうということを知らせてきている。\n宗教建築はこの信仰の家が初めて建てられた時から大いなる発達を遂げており、我等から資金を出せば、外国の専門家を連れてこれるだろうが…"
+ patriarch_events.3.d:0 "[local_see_province.GetName]の大聖堂は損傷しており、早急に修理する必要がある。大主教は修理費用を我々が支援してくれることを期待し、また主教座の改装も教会にとっては極めて有益であろうということを知らせてきている。\n宗教建築はこの信仰の家が初めて建てられた時から大いなる発達を遂げており、外国の専門家を連れてくるのは確かに有益だが…"
  patriarch_events.3.a:0 "それに値する改装をしよう！"
  patriarch_events.3.b:0 "修繕はするが、それ以上のことはしない。"
  patriarch_events.4.t:0 "[judaizers_province.GetAreaName]の異端！"
